welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: value or is not a member of Int
  return Math.abs(100-n) or Math.abs(200-n)
                         ^